--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
           <img src="img/seinfeld.gif">
           <ul class="contact-info">
-            <li>No, really...let's get pizza:</li>
+            <li>No, really...let's get pizza!</li>
             <li><a href="www.twitter.com/mariiiiiiiina">Let's Tweet</a></li>
             <li><a href="www.instagram.com/pizzaglittermountain">Instagram-jam</a></li>
             <li><a href="www.twitter.com/mariiiiiiiina">Send a carrier pigeon</a></li>
