Update html to be semantic and CSS to be specific

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-      <div class="page-marquee">
+      <header class="page-marquee">
         <div class="container">
           <div class="page-marquee__photo">
             <img src="img/my-photo.png">
-            <div class="page-marquee__photo-shadow"></div>
           </div>
           <div class="page-marquee__content">
             <h1>Welcome to <br>Marina-ville!</h1>
@@ -29,16 +28,16 @@
             <h1 class="icons">&#11824; &#11824; &#11824;</h1>
           </div>
         </div>
-      </div>
+      </header>
       <section class="content-section__small">
         <div class="container">
-          <h2>Monday through Friday, I am a Product Designer at <a href="http://www.braintreepayments.com">Braintree</a>. Saturday and Sunday, I am an explorer, bruncher, traveler, ikea hacker, bike rider, drummer, beer drinker, instagrammer, couch potato, concert go-er, or kitten cuddler.</h1>
+          <h2>Monday through Friday, I am a Product Designer at <a href="http://www.braintreepayments.com">Braintree</a>. Saturday and Sunday, I am an explorer, bruncher, traveler, ikea hacker, bike rider, drummer, beer drinker, instagrammer, couch potato, concert go-er, or kitten cuddler.</h2>
         </div>
       </section>
-      <section class="content-section__contact">
+      <footer class="content-section__contact">
         <div class="container">
           <img src="img/seinfeld.gif">
-          <ul class="contact-info">
+          <ul>
             <li>No, really...let's get pizza!</li>
             <li><a href="www.twitter.com/mariiiiiiiina">Let's Tweet</a></li>
             <li><a href="www.instagram.com/pizzaglittermountain">Instagram-jam</a></li>
@@ -46,7 +45,7 @@
           </ul>
           <h1 class="text-center">&#9786; &#9786; &#9786; &#9786; &#9786; &#9786; &#9786;</h1>
         </div>
-      </section>
+      </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
