Create Kitten website

--- a/sears.html
+++ b/sears.html
@@ -11,12 +11,87 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link href='http://fonts.googleapis.com/css?family=Roboto+Mono:400,300' rel='stylesheet' type='text/css'>
+        <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <link rel="stylesheet" href="css/sears.css">
+        <link href='http://fonts.googleapis.com/css?family=Poppins:400,600,700' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-      <h1>hello</h1>
+      <div>
+        <header>
+          <nav class="global-nav">
+            <div class="container">
+              <h1 class="logo">BUY A KITTEN</h1>
+              <ul class="nav">
+                <li>
+                  <a href="#">Phone Number</a>
+                </li>
+                <li>
+                 <a href="#">Chat Meow</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </header>
+        <section class="page-content cat-marquee-header">
+          <div class="subhead">
+            <div class="container">
+              <h1>Don't you think you need a kitten?</h1>
+            </div>
+          </div>
+          <div class="container">
+            <div class="cat-marquee-content">
+              <h1>18 Months financing</h1>
+            </div>
+          </div>
+        </section>
+        <aside class="container kitten-form group">
+          <form>
+            <h2>Would you like to schedule a kitten party?</h2>
+            <label>First and Last Name</label>
+            <input type="text">
+            <label>Address</label>
+            <input type="text">
+            <label>Email</label>
+            <input type="text">
+            <label>Phone Number</label>
+            <input type="text">
+            <label>Number of felines  </label>
+            <select>
+              <option value="volvo">3</option>
+              <option value="saab">5</option>
+              <option value="mercedes">10</option>
+              <option value="audi">Surprise me</option>
+            </select>
+            <label>Cat</label>
+            <input type="radio">
+            <label>Kitten</label>
+            <input type="radio">
+            <button>Order Kitten</button>
+          </form>
+        </aside>
+        <article>
+          <div class="container">
+            <ul class="kitten-buckets">
+              <li>
+                <img src="https://placekitten.com/g/200/300">
+                <p>Kittens are so cute</p>
+              </li>
+              <li>
+                <img src="https://placekitten.com/g/200/300">
+                <p>Kittens are so cute</p>
+              </li>
+              <li>
+                <img src="https://placekitten.com/g/200/300">
+                <p>Kittens are so cute</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <footer class="container group">
+          <p>Sweet beast. Scratch leg; meow for can opener to feed me ears back wide eyed or sit in box and refuse to drink water except out of someone's glass yet flop over, but spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce. Cat snacks put toy mouse in food bowl run out of litter box at full speed . Peer out window, chatter at birds, lure them to mouth sweet beast, but under the bed ears back wide eyed peer out window, chatter at birds, lure them to mouth. Has closed eyes but still sees you mark territory, so damn that dog lounge in doorway yet rub face on owner but chew foot, yet scream at teh bath. Caticus cuteicus. Chase ball of string pooping rainbow while flying in a toasted bread costume in space bathe private parts with tongue then lick owner's face, or refuse to drink water except out of someone's glass yet rub face on owner chase red laser dot. Stare at the wall, play with food and get confused by dust. Pooping rainbow while flying in a toasted bread costume in space under the bed lick butt shake treat bag. Under the bed intently sniff hand. Claws in your leg peer out window, chatter at birds, lure them to mouth, but roll on the floor purring your whiskers off under the bed, yet pooping rainbow while flying in a toasted bread costume in space for jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed so love to play with owner's hair tie. Cough furball purr while eating yet stretch, but caticus cuteicus and sleep on dog bed, force dog to sleep on floor. Hate dog chase dog then run away, throwup on your pillow, so jump around on couch, meow constantly until given food, . Missing until dinner time has closed eyes but still sees you sit in box. Sit by the fire. </p>
+        </footer>
+    </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
