--- a/animation.html
+++ b/animation.html
@@ -20,52 +20,52 @@
         <h1>A LONELY SQUARE</h1>
         <div class="wrapper">
           <div class="row">
-            <div class="square square-animation"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square square-red"></div>
+            <div class="square square-orange"></div>
+            <div class="square square-yellow"></div>
+            <div class="square square-green"></div>
+            <div class="square square-blue"></div>
+            <div class="square square-purple"></div>
           </div>
           <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square square-red"></div>
+            <div class="square square-orange"></div>
+            <div class="square square-yellow"></div>
+            <div class="square square-green"></div>
+            <div class="square square-blue"></div>
+            <div class="square square-purple"></div>
           </div>
           <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square square-red"></div>
+            <div class="square square-orange"></div>
+            <div class="square square-yellow"></div>
+            <div class="square square-green"></div>
+            <div class="square square-blue"></div>
+            <div class="square square-purple"></div>
           </div>
           <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square square-red"></div>
+            <div class="square square-orange"></div>
+            <div class="square square-yellow"></div>
+            <div class="square square-green"></div>
+            <div class="square square-blue"></div>
+            <div class="square square-purple"></div>
           </div>
           <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square square-red"></div>
+            <div class="square square-orange"></div>
+            <div class="square square-yellow"></div>
+            <div class="square square-green"></div>
+            <div class="square square-blue"></div>
+            <div class="square square-purple"></div>
           </div>
           <div class="row">
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
-            <div class="square"></div>
+            <div class="square square-red"></div>
+            <div class="square square-orange"></div>
+            <div class="square square-yellow"></div>
+            <div class="square square-green"></div>
+            <div class="square square-blue"></div>
+            <div class="square square-purple"></div>
           </div>
         </div>
 
