Added position and opacity animation

--- a/animation.html
+++ b/animation.html
@@ -17,8 +17,8 @@
     </head>
     <body>
       <section>
-        <h1>A LONELY SQUARE</h1>
-        <div class="wrapper">
+        <h1 class="h1-appear">A LONELY SQUARE</h1>
+        <div class="wrapper wrapper-appear">
           <div class="row">
             <div class="square square-red"></div>
             <div class="square square-orange"></div>
